[package]
name = "yarecs"
version = "0.2.2"
edition = "2021"

[[bin]]
name = "yarecs"
path = "src/main.rs"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
toml  = "1.1"

[dependencies]
# Ripgrep's grep crate - top-level entrypoint to grep-regex, grep-matcher, grep-searcher
grep = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "1.1"
walkdir = "2"
anyhow = "1"
